--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -1,7 +1,6 @@
 ---
-import { Heading, BodyShort } from "@navikt/ds-react";
+import { Heading } from "@navikt/ds-react";
 import { text } from "@src/language/text";
-import ClientIsland from "@src/components/ClientIsland";
 import type { Language } from "@src/types";
 import styles from "@src/styles/index.module.css";
 import "@src/styles/aksel.css";
@@ -15,6 +14,5 @@ const language = Astro.currentLocale as Language;
     <Heading size="medium" level="2">
       {text.title[language]}
     </Heading>
-    <ClientIsland client:only="react" />
   </div>
 </section>
