--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -2,6 +2,7 @@
 import { Heading, BodyLong } from "@navikt/ds-react";
 import { ChevronRightIcon } from "@navikt/aksel-icons";
 import { text } from "@src/language/text";
+import { isLocal } from "../../utils/environment";
 import type { Language } from "@src/types";
 import styles from "@src/styles/index.module.css";
 import "@src/styles/aksel.css";
@@ -9,6 +10,7 @@ import "@src/styles/aksel.css";
 const language = Astro.currentLocale as Language;
 ---
 
+{isLocal && <meta charset="UTF-8"/>}
 <div class="pensjonskalkulator-microfrontend-ssr">
   <a class={styles.container} href="https://www.nav.no/pensjon/kalkulator/login">
     <div>
