--- a/src/styles/aksel.css
+++ b/src/styles/aksel.css
@@ -1,6 +1,6 @@
-@import '../../node_modules/@navikt/ds-css/dist/global/fonts.css';
-@import '../../node_modules/@navikt/ds-css/dist/global/tokens.css';
-@import '../../node_modules/@navikt/ds-css/dist/global/reset.css';
-@import '../../node_modules/@navikt/ds-css/dist/global/baseline.css';
-@import '../../node_modules/@navikt/ds-css/dist/global/print.css';
-@import '../../node_modules/@navikt/ds-css/dist/component/typography.css';
+@import "../../node_modules/@navikt/ds-css/dist/global/fonts.css" layer(aksel);
+@import "../../node_modules/@navikt/ds-css/dist/global/tokens.css" layer(aksel);
+@import "../../node_modules/@navikt/ds-css/dist/global/reset.css" layer(aksel);
+@import "../../node_modules/@navikt/ds-css/dist/global/baseline.css" layer(aksel);
+@import "../../node_modules/@navikt/ds-css/dist/global/print.css" layer(aksel);
+@import "../../node_modules/@navikt/ds-css/dist/component/typography.css" layer(aksel);
