--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -3,18 +3,18 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  box-shadow: var(--a-shadow-xsmall);
   width: 100%;
-  color: #272727 !important;
+  color: #272727;
   text-decoration: none;
-  background-color: var(--a-surface-alt-3-subtle, #cce2f0) !important;
+  box-shadow: var(--a-shadow-xsmall);
+  background-color: var(--a-surface-alt-3-subtle, #cce2f0);
   border-radius: 0.75rem;
 }
 
 .container:hover {
   cursor: pointer;
-  background-color: var(--a-surface-alt-3-moderate, #99c4dd);
   box-shadow: var(--a-shadow-small);
+  background-color: var(--a-surface-alt-3-moderate, #99c4dd);
 }
 
 .container:hover .chevron {
