--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -1,6 +1,8 @@
 ---
-import { Heading } from "@navikt/ds-react";
+import { Heading, BodyLong } from "@navikt/ds-react";
+import { ChevronRightIcon } from "@navikt/aksel-icons";
 import { text } from "@src/language/text";
+import { isLocal } from "../../utils/environment";
 import type { Language } from "@src/types";
 import styles from "@src/styles/index.module.css";
 import "@src/styles/aksel.css";
@@ -8,10 +10,17 @@ import "@src/styles/aksel.css";
 const language = Astro.currentLocale as Language;
 ---
 
-<section class="tms-microfrontend-template-ssr">
-  <div class={styles.microfrontend}>
-    <Heading size="medium" level="2">
-      {text.title[language]}
-    </Heading>
-  </div>
-</section>
+{isLocal && <meta charset="UTF-8" />}
+<div class="pensjonskalkulator-microfrontend-ssr">
+  <a class={styles.container} href="https://www.nav.no/pensjon/kalkulator/login">
+    <div>
+      <Heading size="small" level="2">
+        {text.title[language]}
+      </Heading>
+      <BodyLong size="medium">
+        {text.ingress[language]}
+      </BodyLong>
+    </div>
+    <ChevronRightIcon className={styles.chevron} aria-hidden="true" fontSize="24px" />
+  </a>
+</div>
